src/validation/tests/snapshots/rusty__validation__tests__bitaccess_validation_test__wordaccess_only_on_bigger_sizes.snap
---
source: src/validation/tests/bitaccess_validation_test.rs
expression: "&diagnostics"
---
error[E055]: Word-Wise access requires a Numerical type larger than 16 bits
   ┌─ <internal>:10:21
   │
10 │             invalid.%W1;
   │                     ^^^ Word-Wise access requires a Numerical type larger than 16 bits

error[E055]: Word-Wise access requires a Numerical type larger than 16 bits
   ┌─ <internal>:11:22
   │
11 │             invalid2.%W1;
   │                      ^^^ Word-Wise access requires a Numerical type larger than 16 bits

error[E055]: Word-Wise access requires a Numerical type larger than 16 bits
   ┌─ <internal>:12:22
   │
12 │             invalid3.%W1;
   │                      ^^^ Word-Wise access requires a Numerical type larger than 16 bits
